--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -50,6 +50,6 @@
     <script src="%PUBLIC_URL%/vendor/swiper/swiper-bundle.min.js"></script>
 
     <script src="%PUBLIC_URL%/js/main.js"></script>
-    <script src="%PUBLIC_URL%/js/sb-admin-2.min.js"></script>
+    <!--<script src="%PUBLIC_URL%/js/sb-admin-2.min.js"></script>-->
   </body>
 </html>
